# wotan

./: CMakeLists.txt
ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
